# claude-confirm

./: .gitignore  Cargo.toml  README.md  claude_desktop_config.example.json  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  vite.config.js
src/frontend/: App.vue
src/frontend/components/: AboutDialog.vue  ExportDropdown.vue  MarkdownViewer.vue  SectionList.vue  UserInput.vue
src/frontend/utils/: export.js  markdown.js
src/rust/: lib.rs  main.rs  types.rs
src/rust/mcp/: mod.rs  server.rs  types.rs
src/rust/ui/: commands.rs  mod.rs
