[package]
name = "claude-confirm"
version = "0.2.3"
edition = "2021"
default-run = "claude-confirm-ui"

[lib]
path = "src/rust/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-confirm-ui"
path = "src/rust/main.rs"

[[bin]]
name = "claude-confirm"
path = "src/rust/bin/mcp_server.rs"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png", "devtools"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "process",
  "sync",
  "time"
] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
base64 = "0.22"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
  "server",
  "transport-io"
] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
